feat: added sections: our firm, frame (reeding house)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,52 @@
           />
         </div>
       </section>
+      <section class="content__our-firm">
+        <h3 class="our-firm__title title-one">Our firm</h3>
+        <div class="our-firm__block-information">
+          <p class="our-firm__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            varius enim in eros elementum tristique. Duis cursus, mi quis
+            viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+            vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+            imperdiet. Nunc ut sem vitae risus tristique posuere.
+          </p>
+          <p class="our-firm__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            varius enim in eros elementum tristique. Duis cursus, mi quis
+            viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+            vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+            imperdiet. Nunc ut sem vitae risus tristique posuere.
+          </p>
+          <p class="our-firm__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            varius enim in eros elementum tristique. Duis cursus, mi quis
+            viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+            vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+            imperdiet. Nunc ut sem vitae risus tristique posuere.
+          </p>
+          <div class="our-firm__user-profile">
+            <div class="user-profile__block-image">
+              <img
+                src="./image/userpic-stephen.jpg"
+                class="user-profile__image"
+              />
+            </div>
+            <div class="user-profile__block-information">
+              <p class="user-profile__name">Stephen Collier</p>
+              <p class="user-profile__job">Senior Partner</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content__reeding-house content__frame">
+        <div class="frame__block-information">
+          <h5 class="frame__title subtitle">Reeding House</h5>
+          <p class="frame__description">
+            Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
