feat: added sections: our process, frame (marble staircase)

--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
           </li>
         </ul>
         <button class="header__menu-button button" type="button">
-          <span class="header__menu-button-text button-text">Get template</span>
+          <a href="#!" class="header__menu-button-text button-text"
+            >Get template</a
+          >
         </button>
       </nav>
     </header>
     <main class="content">
       <section class="content__greeting">
         <div class="greeting__block-information">
-          <h5 class="greeting__subtitle subtitle">Wishbone+Partners</h5>
+          <h6 class="greeting__subtitle subtitle">Wishbone+Partners</h6>
           <h1 class="greeting__title">The home of beautiful architecture.</h1>
           <p class="greeting__description">
             We are an architecture firm with a focus on beautiful but functional
@@ -62,7 +64,7 @@
         </div>
       </section>
       <section class="content__our-firm">
-        <h3 class="our-firm__title title-one">Our firm</h3>
+        <h3 class="our-firm__title title-two">Our firm</h3>
         <div class="our-firm__block-information">
           <p class="our-firm__description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
@@ -101,7 +103,67 @@
       </section>
       <section class="content__reeding-house content__frame">
         <div class="frame__block-information">
-          <h5 class="frame__title subtitle">Reeding House</h5>
+          <h6 class="frame__title subtitle">Reeding House</h6>
+          <p class="frame__description">
+            Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
+          </p>
+        </div>
+      </section>
+      <section class="content__our-process">
+        <div class="our-process__block-information">
+          <h6 class="our-process__subtitle subtitle">Our process</h6>
+          <h2 class="our-process__title title-one">How we do what we do.</h2>
+          <ul class="our-process__list-tasks">
+            <li class="our-process__task">
+              <div class="task__block-icon">
+                <svg class="task__icon" viewBox="0 0 117 102">
+                  <use href="./svg/icon-sketching.svg"></use>
+                </svg>
+              </div>
+              <div class="task__block-information">
+                <h5 class="task__title">Sketching</h5>
+                <p class="task__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                  ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae
+                  tempor leo iaculis.
+                </p>
+              </div>
+            </li>
+            <li class="our-process__task">
+              <div class="task__block-icon">
+                <svg class="task__icon" viewBox="0 0 117 102">
+                  <use href="./svg/icon-finalizing.svg"></use>
+                </svg>
+              </div>
+              <div class="task__block-information">
+                <h5 class="task__title">Finalizing</h5>
+                <p class="task__description">
+                  Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor
+                  leo iaculis luctus sapien ac arcu tempor, vitae.
+                </p>
+              </div>
+            </li>
+            <li class="our-process__task">
+              <div class="task__block-icon">
+                <svg class="task__icon" viewBox="0 0 117 102">
+                  <use href="./svg/icon-building.svg"></use>
+                </svg>
+              </div>
+              <div class="task__block-information">
+                <h5 class="task__title">Building</h5>
+                <p class="task__description">
+                  Nulla ut tristique libero. Lorem ipsum ut tristique libero.
+                  Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor
+                  leo iaculis.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="content__marble-staircase content__frame">
+        <div class="frame__block-information">
+          <h6 class="frame__title subtitle">The marble staircase</h6>
           <p class="frame__description">
             Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
           </p>
