feat: added sections: clients, frame (swirling staircase)

--- a/index.html
+++ b/index.html
@@ -169,6 +169,49 @@
           </p>
         </div>
       </section>
+      <section class="content__clients">
+        <div class="clients__block-information">
+          <div class="clients__block-text">
+            <h6 class="clients__subtitle subtitle">prior clients</h6>
+            <h3 class="clients__title title-two">Happy customers.</h3>
+            <p class="clients__description">
+              Morbi neque ex, condimentum dapibus congue et, vulputate ut
+              ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et
+              nisi ultrices, ut faucibus orci tincidunt.
+            </p>
+          </div>
+          <div class="clients__block-logos">
+            <div class="clients__block-logo">
+              <svg class="clients__logo-one" viewBox="0 0 128 30">
+                <use href="./svg/logo-clients-one.svg"></use>
+              </svg>
+            </div>
+            <div class="clients__block-logo">
+              <svg class="clients__logo-two" viewBox="0 0 128 78">
+                <use href="./svg/logo-clients-two.svg"></use>
+              </svg>
+            </div>
+            <div class="clients__block-logo">
+              <svg class="clients__logo-three" viewBox="0 0 128 20">
+                <use href="./svg/logo-clients-three.svg"></use>
+              </svg>
+            </div>
+            <div class="clients__block-logo">
+              <svg class="clients__logo-four" viewBox="0 0 128 36">
+                <use href="./svg/logo-clients-four.svg"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content__swirling-staircase content__frame">
+        <div class="frame__block-information">
+          <h6 class="frame__title subtitle">The swirling staircase</h6>
+          <p class="frame__description">
+            Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
