--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
             imperdiet. Nunc ut sem vitae risus tristique posuere.
           </p>
-          <div class="our-firm__user-profile">
+          <div class="user-profile">
             <div class="user-profile__block-image">
               <img
                 src="./image/userpic-stephen.jpg"
@@ -210,6 +210,128 @@
           <p class="frame__description">
             Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.
           </p>
+        </div>
+      </section>
+      <section class="content__feature-projects">
+        <div class="feature-projects__block-content">
+          <div class="feature-projects__block-text">
+            <h2 class="feature-projects__title title-one">Featured projects</h2>
+            <p class="feature-projects__description">
+              Some of the latest and greatest projects from us here at
+              Wishbone+Partners.
+            </p>
+          </div>
+          <div class="feature-projects__block-projects">
+            <ul class="feature-projects__list-cards">
+              <li class="feature-projects__list-item-card">
+                <article
+                  class="feature-projects__card card-image-one"
+                ></article>
+              </li>
+              <li class="feature-projects__list-item-card">
+                <article class="feature-projects__card card-image-two">
+                  <div class="card__block-titles">
+                    <h6 class="card__subtitle subtitle">New York</h6>
+                    <h4 class="card__title">Big Road Brewery</h4>
+                  </div>
+                  <button class="card__button button" type="button">
+                    <a href="#!" class="card__button-text button-text"
+                      >Read more</a
+                    >
+                  </button>
+                </article>
+              </li>
+              <li class="feature-projects__list-item-card">
+                <article
+                  class="feature-projects__card card-image-three"
+                ></article>
+              </li>
+            </ul>
+            <div class="feature-projects__block-action">
+              <button class="feature-projects__button button" type="button">
+                <a href="#!" class="feature-projects__button-text button-text"
+                  >View all projects</a
+                >
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content__team">
+        <div class="team__block-content">
+          <div class="team__block-text">
+            <h3 class="team__title title-two">Meet our team</h3>
+            <p class="team__description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros elementum tristique. Duis cursus,
+              mi quis.
+            </p>
+            <button class="team__button button" type="button">
+              <a href="#!" class="team__button-text button-text">See team</a>
+            </button>
+          </div>
+          <div class="team__block-users">
+            <div class="user-profile">
+              <div class="user-profile__block-image">
+                <img
+                  src="./image/userpic-stephen.jpg"
+                  class="user-profile__image"
+                />
+              </div>
+              <div class="user-profile__block-information">
+                <p class="user-profile__name">Stephen Collier</p>
+                <p class="user-profile__job">Senior Partner</p>
+              </div>
+            </div>
+            <div class="user-profile">
+              <div class="user-profile__block-image">
+                <img
+                  src="./image/userpic-nolan.jpg"
+                  class="user-profile__image"
+                />
+              </div>
+              <div class="user-profile__block-information">
+                <p class="user-profile__name">Nolan Peters</p>
+                <p class="user-profile__job">Associate</p>
+              </div>
+            </div>
+            <div class="user-profile">
+              <div class="user-profile__block-image">
+                <img
+                  src="./image/userpic-ferris.jpg"
+                  class="user-profile__image"
+                />
+              </div>
+              <div class="user-profile__block-information">
+                <p class="user-profile__name">Ferris Wonder</p>
+                <p class="user-profile__job">Associate Partner</p>
+              </div>
+            </div>
+            <div class="user-profile">
+              <div class="user-profile__block-image">
+                <img
+                  src="./image/userpic-aria.jpg"
+                  class="user-profile__image"
+                />
+              </div>
+              <div class="user-profile__block-information">
+                <p class="user-profile__name">Aria Stone</p>
+                <p class="user-profile__job">Senior Partner</p>
+              </div>
+            </div>
+            <div class="user-profile">
+              <div class="user-profile__block-image">
+                <img
+                  src="./image/userpic-niko.jpg"
+                  class="user-profile__image"
+                />
+              </div>
+              <div class="user-profile__block-information">
+                <p class="user-profile__name">Niko Ferry</p>
+                <p class="user-profile__job">Partner</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
