feat: added sections: contact, footer

--- a/index.html
+++ b/index.html
@@ -334,7 +334,61 @@
           </div>
         </div>
       </section>
+      <section class="content__contact">
+        <div class="contact__block-content">
+          <div class="contact__block-titles">
+            <h6 class="contact__subtitle subtitle">Get in touch</h6>
+            <h2 class="contact__title title-one">
+              Think we would be a good fit for your next project?
+            </h2>
+          </div>
+          <button class="contact__button button">
+            <a href="#!" class="contact__button-text button-text"
+              >Get in touch</a
+            >
+          </button>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__block-content">
+        <div class="footer__block-information">
+          <div class="footer__block-logo">
+            <svg class="footer__logo" viewBox="0 0 220 19">
+              <use href="./svg/logo.svg"></use>
+            </svg>
+          </div>
+          <div class="footer__block-text">
+            <p class="footer__text">Powered by Webflow</p>
+            <p class="footer__text">
+              All rights reserved Wishbone+Partners, Inc. Licensing.
+            </p>
+          </div>
+        </div>
+        <ul class="footer__list-media">
+          <li class="footer__list-item-media">
+            <a href="#!" class="footer__media-link">
+              <svg class="media__icon icon-twitter" viewBox="0 0 24 20">
+                <use href="./svg/icon-twitter.svg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__list-item-media">
+            <a href="#!" class="footer__media-link">
+              <svg class="media__icon icon-instagram" viewBox="0 0 24 24">
+                <use href="./svg/icon-instagram.svg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__list-item-media">
+            <a href="#!" class="footer__media-link">
+              <svg class="media__icon icon-facebook" viewBox="0 0 12 24">
+                <use href="./svg/icon-facebook.svg"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
